# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPLv2

  09 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    If the adjtime file is not specified, then don't bother trying to use its
    facilities so that we can run clock as early as possible in the boot
    process.

  09 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    depscan.sh will correctly adjust future mtimes in /etc/conf.d and
    /etc/init.d, #157432 hopefully for the last time.

    Split clock configs into BSD and Linux - we share the same init file though.

    You can now specify relay and suffix for ip6to4 interfaces, thanks
    to Asfand Yar Qazi.

    Add conditionalrestart action, which is the same as restart but the service
    is only restarted if it is already started. This means that anything that
    whats this only has to use one command instead of two, making them more
    efficient.

  08 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    Create a test file, and if the status is newer than that bail out
    after running the service, #154670.

    bootmisc now just checks to see if the pid exists for .pid files in
    /var/run as we cannot rely on the pidfile name matching the process
    name.

  05 Jan 2007; Roy Marples <uberlord@gentoo.org>:

    We now default to using WEP open unless specified.

    prism54 drivers always report a carrier, which is wrong. Luckily
    they don't report an essid when not assoicated, so we check that too.

    If we don't find an access point in the first scan, sleep for a second
    and try again. Do this another time by default for a total of 3 scans.
    This is in addition to the scans_eth0 setting. BSD has decent drivers,
    so no need for this there.

  05 Jan 2007; Mike Frysinger <vapier@gentoo.org>:

    Make sure symlinks to directories in /etc/init.d do not screw us up
    when we run depscan.sh #159999 by Majin Sniper.
