@@ -6,17 +6,10 @@
 # and should be called as such. This means that our init scripts
 # should work as is with zero modification :)
 
-# Actually, the above is a small as lie we have some init scripts which try to
-# get start-stop-daemon to launch a shell script. While this does work with
-# the start-stop-daemon program in /sbin, it does cause a problem for us
-# when we're testing for the daemon to be running. I (Roy Marples) view this
-# as behaviour by design as start-stop-daemon should not be used to run shell
-# scripts!
-
 RC_GOT_DAEMON="yes"
 
-[[ ${RC_GOT_FUNCTIONS} != "yes" ]] && source /sbin/functions.sh
-[[ ${RC_GOT_SERVICES} != "yes" ]] && source "${svclib}/sh/rc-services.sh"
+[[ ${RC_GOT_FUNCTIONS} != "yes" ]] && . /sbin/functions.sh
+[[ ${RC_GOT_SERVICES} != "yes" ]] && . "${svclib}/sh/rc-services.sh"
 
 RC_WAIT_ON_START="0.2"
 RC_WAIT_ON_STOP="5"
@@ -74,6 +67,10 @@ rc_shift_args() {
 			-m|--m*)
 				makepidfile=true
 				;;
+			-R|--r*)
+				addvar="retry"
+				retry=
+				;;
 			-s|--si*)
 				addvar="signal"
 				signal=
@@ -123,53 +120,6 @@ rc_setup_daemon_vars() {
 	return 0
 }
 
-# char* pidof(char* cmd, ...)
-#
-# Returns a space seperated list of pids associated with the command
-# This is to handle the rpc.nfsd program which acts weird
-pidof() {
-	local arg= args=
-
-	for arg in "$@"; do
-		[[ ${arg##*/} == "rpc.nfsd" ]] && arg="${arg%/*}/nfsd"
-		args="${args} '"${arg}"'"
-	done
-
-	eval /bin/pidof -x ${args}
-}
-
-# bool is_daemon_running(char* cmd, char* pidfile)
-#
-# Returns 0 if the given daemon is running, otherwise 1
-# If a pidfile is supplied, the pid inside it must match
-# a pid in the list of pidof ${cmd}
-is_daemon_running() {
-	local cmd= pidfile= pids= pid=
-
-	if [[ $# == "1" ]]; then
-		cmd="$1"
-	else
-		local i j="$#"
-		for (( i=0; i<j-1; i++ )); do
-			cmd="${cmd} $1"
-			shift
-		done
-		pidfile="$1"
-	fi
-
-	pids=$(pidof ${cmd})
-	[[ -z ${pids} ]] && return 1
-
-	# If the pidfile vanishes, we have stopped
-	if [[ ! -s ${pidfile} ]] ; then
-		[[ -z ${pidfile} ]]
-		return $?
-	fi
-	
-	pid=$(sed '1q' "${pidfile}" 2>/dev/null)
-	[[ -n ${pid} && " ${pids} " == *" ${pid%% *} "* ]]
-}
-
 # int rc_start_daemon(void)
 #
 # We don't do anyting fancy - just pass the given options
@@ -180,8 +130,8 @@ rc_start_daemon() {
 	eval /sbin/start-stop-daemon "${args}"
 	retval=$?
 
-	[[ ${retval} != "0" ]] && return "${retval}"
-	[[ ${RC_WAIT_ON_START} == "0" ]] && return "${retval}"
+	[[ ${retval} != 0 ]] && return ${retval}
+	[[ ${RC_WAIT_ON_START} == "0" ]] && return ${retval}
 
 	# Now we are started, check the process name if requested
 	[[ -n ${name} ]] && cmd="${name}"
@@ -191,58 +141,33 @@ rc_start_daemon() {
 	# to handle daemons who launch and then fail due to invalid
 	# configuration files
 	LC_ALL=C sleep "${RC_WAIT_ON_START}"
-	is_daemon_running ${cmd} "${pidfile}"
-	retval="$?"
-	[[ ${retval} == "0" ]] && return 0
 
-	# Stop if we can to clean things up
-	[[ -n ${pidfile} ]] && rc_stop_daemon
+	local opts="--test --stop"
+	[[ -n ${cmd} ]] && opts="${opts} --exec \"${cmd}\""
+	[[ -n ${pidfile} ]] && opts="${opts} --pidfile \"${pidfile}\""
+	[[ -n ${name} ]] && opts="${opts} --name \"${name}\""
+	eval /sbin/start-stop-daemon ${opts} >/dev/null && return 0
 
-	return "${retval}"
+	[[ -f ${pidfile} ]] && rm -f "${pidfile}"
+	return 1 
 }
 
 # bool rc_stop_daemon(void)
 #
-# Instead of calling start-stop-daemon we instead try and
-# kill the process ourselves and any children left over
-# Returns 0 if everything was successful otherwise 1
+# We basically use a default schedule here if one is not supplied.
+# If we are successful, then we clean up the pidfile if the daemon didn't.
 rc_stop_daemon() {
-	eval /sbin/start-stop-daemon "${args}"
+	local retryargs=
+	[[ -z ${retry} && ${RC_wAIT_ON_STOP:-5} -gt 0 ]] \
+		&& retryargs="--retry ${signal:--TERM}/${RC_WAIT_ON_STOP:-5}"
 
-	local pid=
-	# Don't wait around if the pidfile does not exist
-	if [[ -n ${pidfile} ]] ; then
-		[[ -e ${pidfile} ]] || return 0
-		# We use cat as the file may have disappeared and we can pipe
-		# errors to /dev/null.
-		if [[ -z ${cmd} ]] ; then
-			pid=$(cat "${pidfile}" 2>/dev/null)
-			[[ -z ${pid} ]] && return 0
-		fi
-	fi
+	eval /sbin/start-stop-daemon ${retryargs} "${args}"
+	local retval=$?
+	[[ ${retval} != 0 ]] && return ${retval}
 
-	[[ -n ${name} ]] && cmd="${name}"
-
-	local timeout=$((${RC_WAIT_ON_STOP} * 10))
-	while [[ ${timeout} -gt 0 ]] ; do
-		((timeout--))
-		if [[ -n ${cmd} ]] ; then
-			is_daemon_running ${cmd} "${pidfile}" || break
-		else
-			# Use proc if we can
-			if [[ -e /proc/self ]] ; then
-				[[ ! -e /proc/${pid} ]] && break
-			else
-				ps -p "${pid}" &>/dev/null || break
-			fi
-		fi
-		LC_ALL=C sleep 0.1
-	done
-	[[ ${timeout} -le 0 ]] && return 1
-	
 	# Remove the pidfile if the process didn't
 	[[ -f ${pidfile} ]] && rm -f "${pidfile}"
-	return 0 
+	return 0
 }
 
 # void update_service_status(char *service)
@@ -252,7 +177,7 @@ rc_stop_daemon() {
 # If not, we stop the service
 update_service_status() {
 	local service="$1" daemonfile="${svcdir}/daemons/$1" i=
-	local -a RC_DAEMONS=() RC_PIDFILES=()
+	local -a RC_DAEMONS=() RC_PIDFILES=() RC_NAMES=()
 
 	# We only care about marking started services as stopped if the daemon(s)
 	# for it are no longer running
@@ -261,9 +186,13 @@ update_service_status() {
 
 	# OK, now check that every daemon launched is active
 	# If the --start command was any good a pidfile was specified too
-	source "${daemonfile}"
+	. "${daemonfile}"
 	for (( i=0; i<${#RC_DAEMONS[@]}; i++ )); do
-		if ! is_daemon_running ${RC_DAEMONS[i]} "${RC_PIDFILES[i]}" ; then
+		local opts="--test --stop"
+		[[ -n ${RC_DAEMONS[i]} ]] && opts="${opts} --exec \"${RC_DAEMONS[i]}"\"
+		[[ -n ${RC_PIDFILES[i]} ]] && opts="${opts} --pidfile \"${RC_PIDFILES[i]}\""
+		[[ -n ${RC_NAMES[i]} ]] && opts="${opts} --name \"${RC_NAMES[i]}\""
+		if ! eval /sbin/start-stop-daemon ${opts} >/dev/null ; then
 			if [[ -e "/etc/init.d/${service}" ]]; then
 				( /etc/init.d/"${service}" stop &>/dev/null )
 				break
@@ -278,15 +207,15 @@ update_service_status() {
 # Return the result of start_daemon or stop_daemon depending on
 # how we are called
 start-stop-daemon() {
-	local args=$(requote "$@") result= i=
+	local args=$(requote "$@") retval= i=
 	local cmd= name= pidfile= pid= stopping= signal= nothing=false
-	local background=false makepidfile=false
+	local background=false makepidfile=false retry=
 	local daemonfile=
-	local -a RC_DAEMONS=() RC_PIDFILES=()
+	local -a RC_DAEMONS=() RC_PIDFILES=() RC_NAMES=()
 
 	if [[ -n ${SVCNAME} ]] ; then
 		daemonfile="${svcdir}/daemons/${SVCNAME}"
-		[[ -e ${daemonfile} ]] && source "${daemonfile}"
+		[[ -e ${daemonfile} ]] && . "${daemonfile}"
 	fi
 
 	rc_setup_daemon_vars
@@ -294,13 +223,13 @@ start-stop-daemon() {
 	# We pass --oknodo and --test directly to start-stop-daemon and return
 	if ${nothing}; then
 		eval /sbin/start-stop-daemon "${args}"
-		return "$?"
+		return $?
 	fi
 
 	if ${stopping}; then
 		rc_stop_daemon
-		result="$?"
-		if [[ ${result} == "0" && -n ${daemonfile} ]]; then
+		retval=$?
+		if [[ ${retval} == 0 && -n ${daemonfile} ]]; then
 			# We stopped the daemon successfully
 			# so we remove it from our state
 			for (( i=0; i<${#RC_DAEMONS[@]}; i++ )); do
@@ -308,17 +237,18 @@ start-stop-daemon() {
 				# But most called to --stop only set the pidfile
 				if [[ ${RC_DAEMONS[i]} == "${cmd}" \
 					|| ${RC_PIDFILES[i]} == "${pidfile}" ]]; then
-					unset RC_DAEMONS[i] RC_PIDFILES[i]
+					unset RC_DAEMONS[i] RC_PIDFILES[i] RC_NAMES[i]
 					RC_DAEMONS=( "${RC_DAEMONS[@]}" )
 					RC_PIDFILES=( "${RC_PIDFILES[@]}" )
+					RC_NAMES=( "${RC_NAMES[@]}" )
 					break
 				fi
 			done
 		fi
 	else
 		rc_start_daemon
-		result="$?"
-		if [[ ${result} == "0" && -n ${daemonfile} ]]; then
+		retval=$?
+		if [[ ${retval} == 0 && -n ${daemonfile} ]]; then
 			# We started the daemon sucessfully
 			# so we add it to our state
 			local max="${#RC_DAEMONS[@]}"
@@ -332,6 +262,7 @@ start-stop-daemon() {
 			if [[ ${i} == "${max}" ]]; then
 				RC_DAEMONS[max]="${cmd}"
 				RC_PIDFILES[max]="${pidfile}"
+				RC_NAMES[max]="${name}"
 			fi
 		fi
 	fi
@@ -342,14 +273,16 @@ start-stop-daemon() {
 	elif [[ -n ${daemonfile} ]] ; then
 		echo "RC_DAEMONS[0]='${RC_DAEMONS[0]}'" > "${daemonfile}"
 		echo "RC_PIDFILES[0]='${RC_PIDFILES[0]}'" >> "${daemonfile}"
+		echo "RC_NAMES[0]='${RC_NAMES[0]}'" >> "${daemonfile}"
 
 		for (( i=1; i<${#RC_DAEMONS[@]}; i++ )); do
 			echo "RC_DAEMONS[${i}]='${RC_DAEMONS[i]}'" >> "${daemonfile}"
 			echo "RC_PIDFILES[${i}]='${RC_PIDFILES[i]}'" >> "${daemonfile}"
+			echo "RC_NAMES[${i}]='${RC_NAMES[i]}'" >> "${daemonfile}"
 		done
 	fi
 
-	return "${result}"
+	return ${retval}
 }
 
-# vim:ts=4
+# vim: set ts=4 :
